2014-12-15 Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (do_event) src/gplt_x11.c src/wxterminal/wxt_gui.cpp
	src/qtterminal/QtGnuplotWidget.cpp:
	Distinguish auto-generated replot events (e.g. replot-on-resize) from 
	user-generated replot events ('e' hotkey or toolbar replot widget).
	Use GE_replot for the former, GE_keypress('e') for the latter.
	Reject auto-generated replot requests while multiplot is active.
	(wxt was already doing this; now we extend it to qt and x11 also).
	Bug #1521

	* src/wxterminal/wxt_gui.cpp:  Do not change working directory in
	file export widget.

2014-12-14  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/command.c src/command.h src/mouse.c src/mousecmn.h src/plot.c
	src/qtterminal/qt_term.cpp src/win/wgraph.c src/win/wpause.c
	src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_term.h:
	Revise "pause mouse" handling on Windows to handle windows, wxt, qt
	and caca terminals.  Test if the current terminal window is actually
	open before waiting for mouse input. (Not yet implemented for qt.)
	The windows terminal no longer expects the core code to reset the
	paused_for_mouse flag (like the qt, wxt and x11 terminals).  The
	code no longer opens an invisible window to handle "pause mouse" and
	code to close this window when "pause mouse" mode ends can thus be
	removed.  Interrupting pause mouse via Ctrl-C should now be possible.
	Bug #1502

	* term/caca.trm (waitforinput):  Support "pause mouse" if the graph is
	shown in a window. Bugfix.

	* docs/windows/doc2html.c:  Rename variable "basename" to "name" since
	due to name conflicts on some platforms.

2014-12-13 Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxtPanel::wxt_cairo_refresh):
	The wxt terminal has been failing when linked against wxgtk3.0.
	The overt sympton is a library assert statement sometimes followed by a
	segfault:
	  ./src/gtk/dcclient.cpp(2043): assert "m_window" failed in DoGetSize():